<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/category_pop_up_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    tools:context="at.sw2017.todo4u.CategoryAddPopup"
    android:weightSum="1">

    <TextView
        android:id="@+id/tv_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:labelFor="@+id/tx_new_category"
        android:text="@string/category_add_title"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/tx_new_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:ems="20"
        android:inputType="textAutoCorrect"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/category_add_btCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/ic_block_dark_color_70dp"
            android:onClick="cancelPopup" />

        <Button
            android:id="@+id/category_add_btSave"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@drawable/ic_check_dark_color_70dp"
            android:onClick="saveNewCategory" />


    </LinearLayout>

    <RadioGroup
        android:layout_width="106dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.87">

        <RadioButton
            android:id="@+id/rbtnNone"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:checked="true"
            android:text="None"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnRed"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:text="Red"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnGreen"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:text="Green"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnYellow"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:text="Yellow"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnBlue"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:text="Blue"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rbtnCyan"
            android:layout_width="match_parent"
            android:layout_height="26sp"
            android:layout_gravity="center"
            android:text="Cyan"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

</LinearLayout>
