<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/bt_add_category"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/category_list_add"
        app:showAsAction="always" />


    <item
        android:id="@+id/bt_search_category"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/category_list_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/bt_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/category_list_settings"
        app:showAsAction="ifRoom|collapseActionView" />


</menu>
