...
    <string name="category_list_title">Categories</string>
    <string name="category_list_add">Add</string>
    <string name="category_list_search">Search</string>
    <string name="category_list_settings">Settings</string>

    <string name="category_add_title">New Category</string>
    <string name="category_add_error_name_empty">Please enter a name for the category.</string>
    <string name="category_add_error_database">Creating category %1$s failed. Maybe it already exists.</string>
    <string name="category_add_success">Category %1$s created successfully.</string>

    <string name="task_list_title">Tasks: %1$s</string>
    <string name="task_list_search">Search</string>
    <string name="task_list_add">Add</string>
...
